--- a/hello.html
+++ b/hello.html
@@ -1,6 +1,7 @@
 <!-- Author: Maks Sloboda (m.slobodianuk@gmail.com) -->
 <html>
   <head>
+   <link type="text/css" rel="stylesheet" media="all" href="style.css" />
   </head>
   <body>
     <h1>Hello, Mad World!</h1>
